完成创建token和验证token逻辑
