# swagger/swagger.json
@@ -20,6 +20,55 @@
                 "tags": [
                     "user"
                 ],
+                "description": "Register",
+                "operationId": "UserController.Register",
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "username",
+                        "description": "用户名",
+                        "required": true,
+                        "type": "string",
+                        "default": "ant"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "password",
+                        "description": "密码",
+                        "required": true,
+                        "type": "string",
+                        "default": "123"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "email",
+                        "description": "邮箱",
+                        "required": true,
+                        "type": "string",
+                        "default": "demo@qq.com"
+                    }
+                ],
+                "responses": {
+                    "1000": {
+                        "description": "参数错误"
+                    },
+                    "1001": {
+                        "description": "请求出错"
+                    },
+                    "2000": {
+                        "description": "用户名已存在"
+                    },
+                    "2005": {
+                        "description": "邮箱已存在"
+                    }
+                }
+            }
+        },
+        "/user/login": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
                 "description": "用户登录",
                 "operationId": "UserController.用户登录",
                 "parameters": [
@@ -41,20 +90,20 @@
                     }
                 ],
                 "responses": {
-                    "1101": {
+                    "1000": {
                         "description": "参数错误"
                     },
-                    "1102": {
+                    "1001": {
                         "description": "请求出错"
-                    },
-                    "1104": {
-                        "description": "用户名不存在"
-                    },
-                    "1105": {
-                        "description": "用户名或者密码错误"
                     },
                     "200": {
                         "description": "登录成功"
+                    },
+                    "2001": {
+                        "description": "用户不存在"
+                    },
+                    "2002": {
+                        "description": "用户名或者密码错误"
                     }
                 }
             }
